# Grade1_FinalAssignment_ultimate_version

./: CMakeLists.txt  README.md  aftegoal.cpp  aftegoal.h  aftergoal.cpp  aftergoal.h  ball.cpp  ball.h  button.cpp  button.h  game.cpp  game.h  kickoff.cpp  kickoff.h  mainwindow.cpp  mainwindow.h  player.cpp  player.h  playerbutton.cpp  playerbutton.h  prescene.cpp  prescene.h  resource.qrc  selectbutton1.cpp  selectbutton1.h  selectbutton2.cpp  selectbutton2.h  selectdialog1.cpp  selectdialog1.h  selectdialog2.cpp  selectdialog2.h  source.qrc  win1.cpp  win1.h  win2.cpp  win2.h
